update for Java/Graalvm